--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   box-sizing: border-box;
 }
 .burger img {
+  cursor: pointer;
   width: 30px;
 }
 .close img {
@@ -66,4 +67,7 @@ nav {
 }
 .navTranslate {
   translate: 40px -300px;
+}
+input:focus {
+  outline: none;
 }
