--- a/style.css
+++ b/style.css
@@ -1,73 +1,145 @@
-.burger,
-.close {
-  width: 50px;
-  height: 50px;
-  margin-top: 64%;
-}
-body {
-  background-color: blue;
-  overflow-x: hidden;
-}
+@import url("https://fonts.googleapis.com/css?family=Lato&display=swap");
+
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
-.burger img {
-  cursor: pointer;
-  width: 30px;
-}
-.close img {
-  width: 30px;
-}
-.circle {
-  position: fixed;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: red;
-  translate: -100px -110px;
-  transition: 0.6s ease;
-  z-index: 2;
-}
-.rotate {
-  rotate: -100deg;
-}
-.main {
-  margin: 0 auto;
-  padding: 70px;
-  text-align: center;
-  /* top: -100px; */
-  padding-left: 50px;
-  padding-right: 50px;
-  transform-origin: top left;
-  transition: 1s ease;
-  background-color: white;
-  min-height: 100vh;
-  width: 100vw;
-}
-h1 {
-  text-align: left;
+
+body {
+  font-family: "Lato", sans-serif;
+  background-color: #333;
+  color: #222;
+  overflow-x: hidden;
+  margin: 0;
 }
 
-.rotateTxt {
+.container {
+  background-color: #fafafa;
+  transform-origin: top left;
+  transition: transform 0.5s linear;
+  width: 100vw;
+  min-height: 100vh;
+  padding: 50px;
+}
+
+.container.show-nav {
   transform: rotate(-20deg);
 }
-.li {
-  transition: translate 1s ease;
-}
-nav {
-  color: beige;
+
+.circle-container {
   position: fixed;
-  translate: -80px -300px;
-  transition: 1s ease;
+  top: -100px;
+  left: -100px;
 }
-.navTranslate {
-  translate: 40px -300px;
+
+.circle {
+  background-color: #ff7979;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  position: relative;
+  transition: transform 0.5s linear;
 }
-input:focus {
+
+.container.show-nav .circle {
+  transform: rotate(-70deg);
+}
+
+.circle button {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 100px;
+  background: transparent;
+  border: 0;
+  font-size: 26px;
+  color: #fff;
+}
+
+.circle button:focus {
   outline: none;
+}
+
+.circle button#open {
+  left: 60%;
+}
+
+.circle button#close {
+  top: 60%;
+  transform: rotate(90deg);
+  transform-origin: top left;
+}
+
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 0.3s;
+}
+
+nav {
+  position: fixed;
+  bottom: 40px;
+  left: 0;
+  z-index: 100;
+}
+
+nav ul {
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  color: #fff;
+  margin: 40px 0;
+  transform: translateX(-100%);
+  transition: transform 0.4s ease-in;
+}
+
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+nav ul li + li {
+  margin-left: 15px;
+  transform: translateX(-150%);
+}
+
+nav ul li + li + li {
+  margin-left: 30px;
+  transform: translateX(-200%);
+}
+
+nav a {
+  color: #fafafa;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+
+nav a:hover {
+  color: #ff7979;
+  font-weight: bold;
+}
+
+.content img {
+  max-width: 100%;
+}
+
+.content {
+  max-width: 1000px;
+  margin: 50px auto;
+}
+
+.content h1 {
+  margin: 0;
+}
+
+.content small {
+  color: #555;
+  font-style: italic;
+}
+
+.content p {
+  color: #333;
+  line-height: 1.5;
 }
